Feat: interface implementation into console UI